# rust

./: .gitignore  README.md  manjaro.md
exercism/low-power-embedded-game/src/: lib.rs
exercism/magazine-cutout/: .gitignore  HINTS.md
exercism/magazine-cutout/.exercism/: metadata.json
exercism/magazine-cutout/src/: lib.rs
exercism/resistor-color/src/: lib.rs
exercism/reverse-polish-notation-calculator/: HINTS.md
exercism/reverse-polish-notation-calculator/src/: lib.rs
exercism/role-playing-game/: HINTS.md
exercism/role-playing-game/src/: lib.rs
hyper-microservice-rest/: .vercelignore  Cargo.toml  README.md  vercel.json
hyper-microservice-rest/api/: handler.rs  index.rs
hyper-microservice-rest/src/: main.rs
leetcode/: longest_common_prefix.rs  palindrome_number.rs  remove_duplicates_from_sorted_array.rs  roman_to_integer.rs  two_sum.rs  valid_parentheses.rs
minigrep/src/: main.rs
rust-by-music-examples/: 01_ownership_borrowing.rs  02_basic_types.rs  03_functions_methods.rs  04_structs_enums.rs  05_lifetimes.rs  06_traits.rs  07_generic_types.rs  08_error_handling.rs  09_macros.rs  10_unsafe_rust.rs  11_smart_pointers.rs  12_closures_iterators.rs  Cargo.toml  README.md  ownership_borrowing_tests.rs  ownership_visual.md
shuttle-axum-restapi/: .vercelignore  README.md  deploy-vercel.sh  vercel.json
shuttle-axum-restapi/src/: main.rs
shuttle-axum-restapi/src/handlers/: mod.rs
web-server--multi-threaded/: Cargo.toml  notes.md
web-server--multi-threaded/src/: lib.rs  main.rs
web-server--single-threaded/src/: main.rs
